[package]
edition = "2018"
name = "components-arena"
version = "2.0.0"
authors = ["warlock <internalmike@gmail.com>"]
description = "Simple library for creating complex domain-specific self-referential data structures."
readme = "README.md"
documentation = "https://docs.rs/components-arena/"
keywords = ["generational", "arena", "tree", "graph", "entity"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/components-arena"

[features]
default = ["nightly"]
nightly = []

[dependencies]
educe = "0.4.18"
either = { version = "1.5.3", default-features = false }
generics = "0.3.1"
phantom-type = { version = "0.3.1", default-features = false }
rand = { version = "0.8.4", default-features = false, features = ["small_rng"] }

[dev-dependencies]
macro-attr-2018 = "1.1.1"
newtype-derive-2018 = "0.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
