[package]
edition = "2021"
name = "components-arena"
version = "3.0.1"
rust-version = "1.61"
authors = ["warlock <internalmike@gmail.com>"]
description = "Simple library for creating complex domain-specific self-referential data structures."
readme = "README.md"
documentation = "https://docs.rs/components-arena/"
keywords = ["generational", "arena", "tree", "graph", "entity"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/components-arena"

[workspace]
members = [
    "traits",
]
exclude = [
    "ensure_no_std",
]

[features]
default = ["nightly"]
nightly = ["components-arena-traits/nightly", "dyn-context?/nightly"]

[dependencies]
components-arena-traits = { path = "traits", version = "1.0.0", default-features = false }
dyn-context = { version = "0.17.0", default-features = false, optional = true }
educe = "0.4.18"
either = { version = "1.6.1", default-features = false }
generics = "0.4.0"
phantom-type = { version = "0.4.1", default-features = false }
rand = { version = "0.8.4", default-features = false, features = ["small_rng"] }

[dev-dependencies]
macro-attr-2018 = "2.0.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[badges]
maintenance = { status = "actively-developed" }
