[package]
edition = "2018"
name = "components-arena-traits"
version = "1.0.0"
rust-version = "1.44"
authors = ["warlock <internalmike@gmail.com>"]
description = "Does not intend for direct use."
readme = "README.md"
documentation = "https://docs.rs/components-arena-traits/"
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/components-arena"

[workspace]

[features]
default = ["nightly"]
nightly = []
